<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <Button
        android:text="@string/toastDemoNormalShort"
        android:id="@+id/toast_normal_short"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/toastDemoNormalLong"
        android:id="@+id/toast_normal_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/toastDemoWithPic"
        android:id="@+id/toast_with_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
