<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.shutup.myfast4android.svg_demo.SvgDemoActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/svgImgTextView"
            android:text="@string/textview_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/girl"
            android:id="@+id/svgImg"
            android:layout_width="@dimen/imageview_size"
            android:layout_height="@dimen/imageview_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/edittext_with_svg"
            android:drawablePadding="@dimen/edittext_drawable_padding"
            android:id="@+id/edittext_with_svg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginRight="@dimen/edittext_drawable_padding"
            android:layout_gravity="center"
            android:src="@drawable/girl"
            android:layout_width="@dimen/imageview_size"
            android:layout_height="@dimen/imageview_size" />
        <EditText
            android:background="@null"
            android:hint="@string/edittext_without_svg"
            android:drawablePadding="@dimen/edittext_drawable_padding"
            android:id="@+id/edittext_without_svg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height" />
    </LinearLayout>

</LinearLayout>
